<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_loadprefs"
        android:title="@string/action_loadprefs"
        android:orderInCategory="100"
        android:onClick="loadDefaults"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_saveprefs"
        android:title="@string/action_saveprefs"
        android:orderInCategory="101"
        android:onClick="saveDefaults"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_keepscreenon"
        android:title="@string/action_keepscreenon"
        android:orderInCategory="102"
        android:onClick="toggleScreenOnOff"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_louder"
        android:title="@string/action_louder"
        android:orderInCategory="103"
        android:onClick="toggleLouder"
        android:checkable="true"
        app:showAsAction="never" />
</menu>
